ENG-7649: Stop defaulting DR producer cluster ID to 0